[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Guns/Pick/W_19-Rail_Gun_Pick.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Guns/W_19_Rail_Gun_01.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Misc/Parts/Outline_Pick.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.1

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.99995
height = 28.0002

[node name="W_19_Rail_Gun_Pick" type="RigidBody2D" groups=["FX", "PickUp"]]
collision_layer = 524288
collision_mask = 917534
physics_material_override = SubResource( 1 )
gravity_scale = 6.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )
gun_num = 19
ammo = 5

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.215686, 0.278431, 0.309804, 1 )
position = Vector2( 0.0969925, -0.0969887 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )
hframes = 8

[node name="Outline" type="Sprite" parent="Sprite"]
show_behind_parent = true
texture = ExtResource( 2 )
hframes = 8
frame = 1
script = ExtResource( 3 )

[node name="Ammo_01" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.815686, 0.0901961, 0.0862745, 1 )
show_behind_parent = true
texture = ExtResource( 2 )
hframes = 8
frame = 2

[node name="Ammo_02" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.815686, 0.0901961, 0.0862745, 1 )
show_behind_parent = true
texture = ExtResource( 2 )
hframes = 8
frame = 3

[node name="Ammo_03" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.815686, 0.0901961, 0.0862745, 1 )
show_behind_parent = true
texture = ExtResource( 2 )
hframes = 8
frame = 4

[node name="Ammo_04" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.815686, 0.0901961, 0.0862745, 1 )
show_behind_parent = true
texture = ExtResource( 2 )
hframes = 8
frame = 5

[node name="Ammo_05" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.815686, 0.0901961, 0.0862745, 1 )
show_behind_parent = true
texture = ExtResource( 2 )
hframes = 8
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_shape_entered" from="." to="." method="_on_WeapPick03Sniper_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
